--- a/portfolio/ayushman-maurya.in/index.html
+++ b/portfolio/ayushman-maurya.in/index.html
@@ -106,7 +106,7 @@
                   <div class="col-lg-6" data-aos="fade-up">
         
                     <div class="progress">
-                      <span class="skill">Penetration Testing<i class="val">100%</i></span>
+                      <span class="skill">Penetration Testing<i class="val">80%</i></span>
                       <div class="progress-bar-wrap">
                         <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
@@ -266,14 +266,14 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Ayushman Maurya</h4>
               <p><em>I am an B.Tech student specializing in Electronics and Communication Engineering, with a strong interest in technology and cybersecurity. As an ethical hacker, I have developed expertise in areas such as cybersecurity, web application security, computer networking, bash scripting, Linux, and Python. Alongside my technical skills, I am also passionate about basketball and have honed my creative side as a content writer. I was an interning at Poptimes, where I contribute my writing skills while expanding my professional experience.</em></p>
               <ul>
                 <li>Deoria</li>
-                <li>linkedin.com/in/</li>
-                <li><a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="9dfcfff5f4eef5f8f6e9f8f0eda9aca9ddfaf0fcf4f1b3fef2f0">[email&#160;protected]</a></li>
+                <li>Ayushman-Maurya</li>
+                <li>ayushmanmaurya01@gmail.com</li>
               </ul>
             </div>
 
@@ -282,7 +282,7 @@
               <h4>Bundelkhand Institute of Engineering and Technology, Jhansi</h4>
               <h5>2021 - 2025</h5>
               <p><em>B. Tech. in Electronics and Communication Engineering</em></p>
-              <p>Average CPGA : 7.00</p>
+              <p>Average CPGA : 6.54(upto 6th sem)</p>
             </div>
             <div class="resume-item">
               <h4>Saraswati Sr. Sec Vidya Mandir, Deoria</h4>
